@@ -1,3 +1,4 @@
+- fix race condition when installing/removing shield
 - fix cargo skip of weight check for some items
 - code: use constants for delayes, shiptypes, jobtypes and cargo items to further improve readability
 - combat: fix alien (with reflective hull) damage calculations
